# myproject_overlay_notepad

./: .gitignore  OverlayNotepad.spec  README.md  main.py  pyproject.toml
src/: qr.jfif
src/overlay_notepad/: app.py  data_store.py  models.py  settings.py
src/overlay_notepad/ui/: about_dialog.py  area_selector.py  overlay_widget.py  settings_dialog.py
